--- a/index.html
+++ b/index.html
@@ -34,35 +34,38 @@
       alt="Movie background"
     />
     <!--MDB BootStrap Navbar -->
-    <nav class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top">
+    <nav
+      class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top"
+    >
       <a class="navbar-brand" href="#">Actor Search</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
-          aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent-555"
+        aria-controls="navbarSupportedContent-555"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
-          <ul class="navbar-nav mr-auto text-dark">
+        <ul class="navbar-nav mr-auto text-dark">
           <li class="nav-item">
-              <a class="nav-link" href="#">About
-              </a>
+            <a class="nav-link" href="#">About </a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Feedback</a>
+            <a class="nav-link" href="#">Feedback</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="#">Contact Us</a>
           </li>
-          </ul>
+        </ul>
       </div>
-      </nav>
-      <!--/.Navbar -->
+    </nav>
+    <!--/.Navbar -->
     <div class="container">
-      <div
-        class="row align-items-end justify-content-center text-center intro"
-      >
-        <h2 class="col-8">
-
-     
+      <div class="row align-items-end justify-content-center text-center intro">
         <h2 class="col-8 justify-content-center">
           Welcome to Project X.
         </h2>
@@ -72,23 +75,44 @@
           actor below.
         </p>
       </div>
-      <div class="row align-items-start justify-content-center">
-        <div class="md-form input-group col-xl-3 col-lg-4 col-md-5 col-sm-6">
-          <input
-            type="text"
-            class="form-control input-btn input"
-            placeholder="Actor name"
-            aria-label="Actor name"
-            aria-describedby="MaterialButton-addon2"
-          />
-          <div class="input-group-append">
-            <button
-              class="btn btn-md btn-secondary m-0 px-3 input-btn search"
-              type="button"
-              id="MaterialButton-addon2"
-            >
-              Search
-            </button>
+      <div class="row">
+        <div class="container col-xl-3 col-lg-4 col-md-5 col-sm-6">
+          <div class="row">
+            <div class="md-form input-group">
+              <input
+                type="text"
+                class="form-control input-btn input"
+                placeholder="Actor name"
+                aria-label="Actor name"
+                aria-describedby="MaterialButton-addon2"
+              />
+              <div class="input-group-append">
+                <button
+                  class="btn btn-md btn-secondary m-0 px-3 input-btn search"
+                  type="button"
+                  id="MaterialButton-addon2"
+                >
+                  Search
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="md-form input-group">
+              <select class="browser-default custom-select">
+                <option selected># of movies to display</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+                <option value="4">Four</option>
+                <option value="5">Five</option>
+                <option value="6">Six</option>
+                <option value="7">Seven</option>
+                <option value="8">Eight</option>
+                <option value="9">Nine</option>
+                <option value="10">Ten</option>
+              </select>
+            </div>
           </div>
         </div>
         <div class="bio-container">
@@ -102,7 +126,8 @@
     </div>
     <!--Footer-->
     <footer id="site-footer" class="container text-center font-dark">
-      <p>&copy; ProjectX 2020:<a href="#" target="_blank"> ActorSearch.com </a>
+      <p>
+        &copy; ProjectX 2020:<a href="#" target="_blank"> ActorSearch.com </a>
       </p>
     </footer>
 
