--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
               </div>
             </div>
           </div>
+          <div class="row errorMsg"></div>
           <div class="row">
             <div class="md-form input-group">
               <select class="browser-default custom-select numOfMovies">
