--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
   <body>
     <img
       class="background-image"
-      src="./assets/pictures/movie-background.jpg"
+      src="assets/pictures/pexels-freestocksorg-133070.jpg"
       alt="Movie background"
     />
     <!--MDB BootStrap Navbar -->
-    <nav class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top">
+    <nav class="mb-1 navbar navbar-expand-sm navbar-light sticky-top">
       <a class="navbar-brand" href="#">Actor Search</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-555"
           aria-controls="navbarSupportedContent-555" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,12 +57,9 @@
       </nav>
       <!--/.Navbar -->
     <div class="container">
-      <div
-        class="row align-items-end justify-content-center text-center intro"
-      >
-        <h2 class="col-8">
 
-     
+      <div class="row align-items-end justify-content-center text-center intro">
+        <h2 class="col-8">
         <h2 class="col-8 justify-content-center">
           Welcome to Project X.
         </h2>
@@ -72,6 +69,7 @@
           actor below.
         </p>
       </div>
+      
       <div class="row align-items-start justify-content-center">
         <div class="md-form input-group col-xl-3 col-lg-4 col-md-5 col-sm-6">
           <input
@@ -79,14 +77,12 @@
             class="form-control input-btn input"
             placeholder="Actor name"
             aria-label="Actor name"
-            aria-describedby="MaterialButton-addon2"
-          />
+            aria-describedby="MaterialButton-addon2"/>
           <div class="input-group-append">
             <button
-              class="btn btn-md btn-secondary m-0 px-3 input-btn search"
+              class="btn btn-rounded m-0 px-3 input-btn sunny-morning-gradient search"
               type="button"
-              id="MaterialButton-addon2"
-            >
+              id="MaterialButton-addon2">
               Search
             </button>
           </div>
@@ -101,7 +97,7 @@
       <div class="row topRated"></div>
     </div>
     <!--Footer-->
-    <footer id="site-footer" class="container text-center font-dark">
+    <footer id="site-footer" class="container text-center font-dark mask heavy-rain-gradient">
       <p>&copy; ProjectX 2020:<a href="#" target="_blank"> ActorSearch.com </a>
       </p>
     </footer>
@@ -109,18 +105,17 @@
     <!-- JQuery -->
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    ></script>
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    </script>
     <!-- Bootstrap tooltips -->
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"
-    ></script>
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js">
+    </script>
     <!-- Bootstrap core JavaScript -->
     <script
       type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"
-    ></script>
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
     <script
       type="text/javascript"
