--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row align-items-end justify-content-center text-center intro">
         <h2 class="col-8 justify-content-center">
-          Welcome to ActorSearch.
+          Welcome to ActorSearch
         </h2>
         <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
@@ -87,15 +87,6 @@
                 aria-label="Actor name"
                 aria-describedby="MaterialButton-addon2"
               />
-              <div class="input-group-append">
-                <button
-                  class="btn btn-md btn-secondary m-0 px-3 input-btn search"
-                  type="button"
-                  id="MaterialButton-addon2"
-                >
-                  Search
-                </button>
-              </div>
             </div>
           </div>
           <div class="row errorMsg"></div>
@@ -117,6 +108,15 @@
             </div>
             <div class="numOfMoviesError"></div>
           </div>
+          <div class="row">
+            <button
+                  class="btn btn-md btn-secondary m-0 px-3 input-btn search"
+                  type="button"
+                  id="MaterialButton-addon2"
+                >
+                  Search
+                </button>
+          </div>
           <div class="previousSearches"></div>
         </div>
 
@@ -132,12 +132,7 @@
     <!--Footer-->
     <footer id="site-footer" class="container text-center font-dark">
       <p>
-        &copy; ActorSearch 2020:<a
-          href="https://sean-marten.github.io/project-1/"
-          target="_blank"
-        >
-          ActorSearch.com
-        </a>
+        &copy; ActorSearch 2020
       </p>
     </footer>
 
