--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <nav
       class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top"
     >
-      <a class="navbar-brand" href="#">Actor Search</a>
+      <a class="navbar-brand" href="index.html">Actor Search</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -53,13 +53,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
         <ul class="navbar-nav mr-auto text-dark">
           <li class="nav-item">
-            <a class="nav-link" href="#">About </a>
+            <a class="nav-link" href="/Users/Vny/BootCamp/Project/project/project-1/team.html"> Team </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Feedback</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
           </li>
         </ul>
       </div>
