--- a/index.html
+++ b/index.html
@@ -31,13 +31,11 @@
   <body>
     <img
       class="background-image"
-      src="./assets/pictures/movie-background.jpg"
+      src="assets/pictures/pexels-freestocksorg-133070.jpg"
       alt="Movie background"
     />
     <!--MDB BootStrap Navbar -->
-    <nav
-      class="mb-1 navbar navbar-expand-sm navbar-dark secondary-color cyan darken-3 sticky-top"
-    >
+    <nav class="mb-1 navbar navbar-expand-sm navbar-light sticky-top">
       <a class="navbar-brand" href="index.html">Actor Search</a>
       <button
         class="navbar-toggler"
@@ -53,7 +51,12 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
         <ul class="navbar-nav mr-auto text-dark">
           <li class="nav-item">
-            <a class="nav-link" href="/Users/Vny/BootCamp/Project/project/project-1/team.html"> Team </a>
+            <a
+              class="nav-link"
+              href="/Users/Vny/BootCamp/Project/project/project-1/team.html"
+            >
+              Team
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Feedback</a>
@@ -64,9 +67,7 @@
     <!--/.Navbar -->
     <div class="container">
       <div class="row align-items-end justify-content-center text-center intro">
-        <h2 class="col-8 justify-content-center">
-          Welcome to ActorSearch
-        </h2>
+        <h2 class="col-8 justify-content-center">Welcome to ActorSearch</h2>
         <p class="col-8">
           This is a one stop shop for you to be able to find out everything you
           need to know about your favorite actor. Try searching your favorite
@@ -107,12 +108,12 @@
           </div>
           <div class="row">
             <button
-                  class="btn btn-md btn-secondary m-0 px-3 input-btn search"
-                  type="button"
-                  id="MaterialButton-addon2"
-                >
-                  Search
-                </button>
+              class="btn btn-rounded btn-secondary m-0 px-3 input-btn sunny-morning-gradient search"
+              type="button"
+              id="MaterialButton-addon2"
+            >
+              Search
+            </button>
           </div>
           <div class="previousSearches"></div>
         </div>
@@ -127,10 +128,11 @@
       <div class="row topRated"></div>
     </div>
     <!--Footer-->
-    <footer id="site-footer" class="container text-center font-dark">
-      <p>
-        &copy; ActorSearch 2020
-      </p>
+    <footer
+      id="site-footer"
+      class="container text-center font-dark mask heavy-rain-gradient"
+    >
+      <p>&copy; ActorSearch 2020</p>
     </footer>
 
     <!-- JQuery -->
