--- a/index.html
+++ b/index.html
@@ -51,12 +51,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent-555">
         <ul class="navbar-nav mr-auto text-dark">
           <li class="nav-item">
-            <a
-              class="nav-link"
-              href="/Users/Vny/BootCamp/Project/project/project-1/team.html"
-            >
-              Team
-            </a>
+            <a class="nav-link" href="./team.html"> Team </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Feedback</a>
