--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </div>
     </div>
     <div class="container">
-      <h4 class="text-center py-4 mostPopular text-dark">Most Popular Movies</h4>
+      <h4 class="text-center py-4 mostPopular text-dark"></h4>
       <div class="row topRated"></div>
     </div>
     <!--Footer-->
