--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
           <li class="nav-item">
             <a class="nav-link" href="./team.html"> Team </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Feedback</a>
-          </li>
         </ul>
       </div>
     </nav>
@@ -119,7 +116,7 @@
       </div>
     </div>
     <div class="container">
-      <h4 class="text-center py-4 mostPopular"></h4>
+      <h4 class="text-center py-4 mostPopular text-dark"></h4>
       <div class="row topRated"></div>
     </div>
     <!--Footer-->
